[package]
name = "requeuest"
version = "0.1.1"
edition = "2018"
authors = ["Amanda Graven <amanda@amandag.net>"]
description = "Queue for HTTP requests using postgres as backing store"
readme = "README.md"

[features]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]

[dependencies]
http = { version = "0.2", optional = true }
http-serde = "1.0"
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
sqlx = { version = "0.5", default_features = false, features = ["postgres", "chrono", "uuid"] }
sqlxmq = { version = "0.2.1", default_features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "=1.8.0", features = ["sync", "parking_lot"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
sqlx = { version = "0.5", default_features = false, features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
