[package]
name = "requeuest"
version = "0.2.1"
edition = "2018"
authors = ["Amanda Graven <amanda@amandag.net>"]
description = "Queue for HTTP requests using postgres as backing store"
repository = "https://gitlab.com/famedly/company/backend/libraries/requeuest"
documentation = "https://docs.rs/requeuest"
readme = "README.md"
license = "AGPL-3.0-only"

[features]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sqlx/runtime-actix-rustls"]
runtime-actix-native-tls = ["sqlx/runtime-actix-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]

[dependencies]
http = { version = "0.2", optional = true }
http-serde = "1.0"
reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
sqlx = { version = "0.5", default_features = false, features = ["postgres", "chrono", "uuid"] }
sqlxmq = { version = "0.2.2", default_features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.11", features = ["sync", "parking_lot"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
color-eyre = { version = "0.5", default_features = false }
hyper = { version = "0.14", features = ["server", "runtime", "tcp", "http2"] }
ntest = "0.7"
sqlx = { version = "0.5", default_features = false, features = ["postgres", "chrono", "uuid", "runtime-tokio-rustls"] }
sqlx-database-tester = { git = "https://gitlab.com/famedly/company/backend/libraries/sqlx-database-tester.git", rev = "acecb522", features = ["runtime-tokio"] }
